fixed email action

--- a/6_contact.html
+++ b/6_contact.html
@@ -176,7 +176,7 @@
 
     <div class="box7">
         <div class="cn1 contact">
-            <form id="contactForm" class="contactForm" method="post" action="//formspree.io/a.haberman25@gmail.com">
+            <form id="contactForm" class="contactForm" method="post" action="http://formspree.io/a.haberman25@gmail.com">
                 <fieldset>
                     <label>Name</label>
                     <input name="name" required type="text">
