update homepage items

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>1_home</title>
 
 
-	
+
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
     <link href="css/nivo-slider.css" rel="stylesheet">
@@ -18,31 +18,11 @@
 <body>
 <div class="ipad-box9">
 
-    <h4>PLACE YOUR BOOKING HERE!!!</h4>
+    <h4>ORDER YOUR CAKE HERE</h4>
 
 <div class="mCont">
         <form action="form/table.php" method="post" class="contactForm table">
             <fieldset>
-                <label class="q1">
-                    Year
-                    <input required name="year" type="text">
-                </label>
-                <label class="q1">
-                    Day
-                    <input required name="day" type="text">
-                </label>
-                <label class="q1">
-                    Month
-                    <input name="month" required type="text">
-                </label>
-                <label class="q1">
-                    Time
-                    <input name="time" required type="text">
-                </label>
-                <label class="q2">
-                    Name
-                    <input name="name" required type="text">
-                </label>
                 <label class="q1">
                     Guests
                     <input name="guests" required type="text">
@@ -72,13 +52,13 @@
     <!-- mCont -->
 </div>
 <!-- box9 -->
-<div class="topBar"><div class="backg"></div><a href="#" class="bookTable" >Book a table</a></div>
+<div class="topBar"><div class="backg"></div><a href="#" class="bookTable" >Order a Cake</a></div>
 
 <div id="header">
     <div class="container">
 
         <div class="logoContainer">
-            <a href="1_home.html"><img src="img/logo.png" alt=""></a>
+            <a href="index.html"><img src="img/logo.png" alt=""></a>
         </div>
 
         <div class="topData">
@@ -102,6 +82,7 @@
 
 <div id="menuContainer">
     <div class="container">
+	    <!-- !start menu -->
         <ul class="mainMenu">
             <li class="subMenu"><a href="#">Home</a>
                 <ul>
@@ -132,11 +113,13 @@
         </ul>
 
         <div class="login">
-            <a href="#" class="bookTable" id="bkTable">Book a table</a>
+            <a href="#" class="bookTable" id="bkTable">Order a Cake</a>
+            <!-- !login
             <ul>
                 <li><a href="#">Login</a></li>
                 <li><a href="#">Password</a></li>
             </ul>
+            -->
         </div>
         <div class="clearfix"></div>
     </div>
@@ -332,12 +315,13 @@
     <div class="box9">
         <div class="top"></div>
         <div class="mid">
-        <h4 class="curved">Book a Table</h4>
-        <span class="subTitle">Its worth!</span>
+        <h4 class="curved">Order a Cake</h4>
+        <span class="subTitle">Its Worth It!</span>
 
         <div class="mCont">
             <form class="contactForm table" id="bkForm" action="form/table.php">
                 <fieldset>
+	                <!-- !date info?
                     <label class="q1">
                         Year
                         <input required name="year" type="text">
@@ -354,6 +338,7 @@
                         Time
                         <input required name="time" type="text">
                     </label>
+                    -->
                     <label class="q2">
                         Name
                         <input required name="name" type="text">
@@ -396,9 +381,9 @@
 
             <div class="mCont">
 
-                <h5><span>16.05.2012</span> Cupcake Monday</h5>
+                <h5><span>16.05.2012</span> Cupcake Tuesday</h5>
 
-                <p>There are many variations of passages of Lorem Ipsum available, but</p>
+                <p>Salted Carmel Vanilla Bean Cupcakes $1 -- Limit 1 per person</p>
                 <a href="#">Read More</a>
 
                 <div class="clearfix"></div>
@@ -555,11 +540,11 @@
             <ul class="social">
                 <li><a href="#" class="fb">Facebook</a></li>
                 <li><a href="#" class="twit">Twitter</a></li>
-                <li><a href="#" class="rss">Rss</a></li>
+                <!-- !rss feed icon <li><a href="#" class="rss">Rss</a></li> -->
                 <li><a href="#" class="mail">E-mail</a></li>
             </ul>
 
-            <p>All Content © Copyright 2012 - This work is licensed under a Creative Commons License.</p>
+            <p>All Content © Copyright 2010 - Sugar Whipped Inc..</p>
 
             <div class="clearfix"></div>
         </div>
