--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="container">
 
         <div class="logoContainer">
-            <a href="index.html"><img src="img/sw-logo-idea.png" alt="Sugar Whipped Cakery"></a>
+            <a href="index.html"><img src="img/sw-logo-idea2.png" alt="Sugar Whipped Cakery"></a>
         </div>
 
         <div class="topData">
